--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+body{
+    font-family: 'Poppins', sans-serif;
 }
 
 .container{
@@ -9,8 +13,15 @@
     height: 100vh;
     background: #e3f9ff;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.container h2{
+    font-size: 35px;
+    margin-bottom: 20px;
+    color: #3a4452;
 }
 .calculator{
     background: #3a4452;
